small fixes (spacing, fINALLY fixed the inactive cards on safari)

--- a/src/Components/AssignmentsCard/AssignmentsCard.scss
+++ b/src/Components/AssignmentsCard/AssignmentsCard.scss
@@ -27,7 +27,7 @@
   height: fit-content;
   width: 100%;
   flex: 1;
-
+  perspective: 1px;
   border-radius: 1em;
   box-shadow: 0 0 0.5em 0em rgba($dark, 0.25);
   &:hover {
