--- a/src/Components/NotesCard/NotesCard.scss
+++ b/src/Components/NotesCard/NotesCard.scss
@@ -27,6 +27,7 @@
 	width: 100%;
 
 	border-radius: 1em;
+	perspective: 1px;
 	box-shadow: 0 0 0.5em 0em rgba($dark, 0.15);
 	&:hover { box-shadow: 0 0 0.5em 0em rgba($dark, 0.5); }
 	background-color: $light;
